
* Allow the About page to be disabled by configuring ABOUT_PAGE = null.