@@ -1,2 +1,4 @@
 
+* Make it clear that the app title can changed by setting WEB_APP_TITLE in config.php.
+
 * Allow the About page to be disabled by configuring ABOUT_PAGE = null.
